--- a/LargeFileTool/LargeFileTool.csproj
+++ b/LargeFileTool/LargeFileTool.csproj
@@ -48,8 +48,9 @@
     <Reference Include="Esent.Interop">
       <HintPath>Lib\Esent.Interop.dll</HintPath>
     </Reference>
-    <Reference Include="FlexibleStreamHandling">
-      <HintPath>..\..\FlexibleStreamHandling\FlexibleStreamHandling\bin\Release\FlexibleStreamHandling.dll</HintPath>
+    <Reference Include="FlexibleStreamHandling, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\FlexibleStreamHandling.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
